Created basic Dialogs
1. Construct basic components and services
2. 10
3. Designed some basic dialogs that will be used for several functions later on, including Login, Register and Browsing.

--- a/Client/Website/src/app/components/general/footer/footer.component.html
+++ b/Client/Website/src/app/components/general/footer/footer.component.html
@@ -26,14 +26,14 @@
                 <p style="margin-left: 16px;" class="content-3"><b> Instagram</b></p>
             </td>
             <td>
-                <p class="content-3"><b>Subscribe to our newsletter</b></p><br>
+                <p class="content-3"><b>{{ "subscribe" | translate }}</b></p><br>
                 <br>
                 <div class="email-module">
                     <div class="email-input">
                         <b><input class="content-5" placeholder="Email Address"></b>
                     </div>
                     <p class="content-4">
-                        <b>Ok</b>
+                        <b>{{ "ok" | translate }}</b>
                     </p>
                 </div>
 
