Added Functionality to the Login Dialog🔒
1. Complete Authentication
2. 10
3. Retrieved and validated the email. Also wrapped the styling of the forgot password in a class.

--- a/Client/Website/src/app/service/dialogs/authentication/login/login.component.scss
+++ b/Client/Website/src/app/service/dialogs/authentication/login/login.component.scss
@@ -151,3 +151,11 @@
     font-size: 14px;
 
 }
+
+.forgot-pass {
+
+    color: #14274A;
+    float: right;
+    font-family: 'Montserrat';
+    font-size: 14px;
+}
