--- a/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
+++ b/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
@@ -7,17 +7,17 @@
     <!-- Email -->
     <mat-form-field class="full-width input">
         <mat-label class="label">{{'email'|translate}}</mat-label>
-        <input matInput>
-        <div class="number-error">
+        <input [(ngModel)]="email" matInput>
+        <div class="number-error"*ngIf="!validated_email">
             {{'invalid_email'|translate}} </div>
     </mat-form-field>
 
     <!-- Password -->
     <mat-form-field class="full-width input">
         <mat-label class="label">{{'password'|translate}}</mat-label>
-        <input matInput>
+        <input [(ngModel)]="password" matInput>
     </mat-form-field>
-    <a style="color: #14274A; float:right; font-family: 'Montserrat';font-size: 14px;">
+    <a class="forgot-pass">
         {{'forgot_password'|translate}}?
     </a>
     <br>
@@ -26,6 +26,8 @@
     </div>
 </div>
 <div mat-dialog-actions>
-    <button style="width: 30%;" class="back-btn" mat-button color="primary">{{'sign_in'|translate}}
+    <button style="width: 30%;" class="back-btn"
+    [disabled]="!email || !password" [style.background]="(!email || !password) ? 'gray' : '#14274A'" mat-button color="primary">
+    {{'sign_in'|translate}}
     </button>
 </div>
