Created the Login Function🔒
1. Complete Authentication
2. 10
3. Created the Login function logic without the api

--- a/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
+++ b/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 <div mat-dialog-actions>
-    <button style="width: 30%;" class="back-btn"
+    <button style="width: 30%;" class="back-btn" (click)="login()"
     [disabled]="!email || !password" [style.background]="(!email || !password) ? 'gray' : '#14274A'" mat-button color="primary">
     {{'sign_in'|translate}}
     </button>
