Completed the Login Process🔒
1. Complete Authentication
2. 10
3. Completed the possible responses of the Login request. Either closing the dialog or displaying an error

--- a/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
+++ b/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
@@ -16,6 +16,8 @@
     <mat-form-field class="full-width input">
         <mat-label class="label">{{'password'|translate}}</mat-label>
         <input [(ngModel)]="password" matInput>
+        <div class="number-error"*ngIf="!validated_credentials">
+            {{'invalid_credentials'|translate}} </div>
     </mat-form-field>
     <a class="forgot-pass">
         {{'forgot_password'|translate}}?
