--- a/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
+++ b/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
@@ -8,7 +8,7 @@
     <mat-form-field class="full-width input">
         <mat-label class="label">{{'email'|translate}}</mat-label>
         <input [(ngModel)]="email" matInput>
-        <div class="number-error"*ngIf="!validated_email">
+        <div class="number-error" *ngIf="!validated_email">
             {{'invalid_email'|translate}} </div>
     </mat-form-field>
 
@@ -16,8 +16,10 @@
     <mat-form-field class="full-width input">
         <mat-label class="label">{{'password'|translate}}</mat-label>
         <input [(ngModel)]="password" matInput>
-        <div class="number-error"*ngIf="!validated_credentials">
+        <div class="number-error" *ngIf="!validated_credentials">
             {{'invalid_credentials'|translate}} </div>
+        <div class="number-error" *ngIf="connection_error">
+            {{'connection_error'|translate}} </div>
     </mat-form-field>
     <a class="forgot-pass">
         {{'forgot_password'|translate}}?
@@ -28,8 +30,8 @@
     </div>
 </div>
 <div mat-dialog-actions>
-    <button style="width: 30%;" class="back-btn" (click)="login()"
-    [disabled]="!email || !password" [style.background]="(!email || !password) ? 'gray' : '#14274A'" mat-button color="primary">
-    {{'sign_in'|translate}}
+    <button style="width: 30%;" class="back-btn" (click)="login()" [disabled]="!email || !password"
+        [style.background]="(!email || !password) ? 'gray' : '#14274A'" mat-button color="primary">
+        {{'sign_in'|translate}}
     </button>
 </div>
