--- a/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
+++ b/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
@@ -35,3 +35,5 @@
         {{'sign_in'|translate}}
     </button>
 </div>
+
+<mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
