--- a/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
+++ b/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
@@ -1,3 +1,12 @@
-<p>
-  table-unit works!
+<p class="title-1">
+  {{data_injection.title}} {{'database' | translate}}
 </p>
+<mat-divider class="divider"></mat-divider>
+
+<app-filter [data]="data" [data_injection]="data_injection"
+  [filtered_data]="filtered_data"></app-filter>
+
+
+<app-table *ngIf="filtered_data && data_injection && data && data_injection" [data]="data"
+  [data_injection]="data_injection" [extra_data]="extra_data" [filtered_data]="filtered_data"
+  (hover)="hover.emit($event)" (modify_click)="modify_click.emit($event)"></app-table>
