Designed the Database component
1. Construct basic components and services
2. 10
3. Designed the database component that will combine what we already created earlier. Added some spare attributes to the unit

--- a/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
+++ b/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
@@ -9,4 +9,4 @@
 
 <app-table *ngIf="filtered_data && data_injection && data && data_injection" [data]="data"
   [data_injection]="data_injection" [extra_data]="extra_data" [filtered_data]="filtered_data"
-  (hover)="hover.emit($event)" (modify_click)="modify_click.emit($event)"></app-table>
+  (hover)="hover.emit($event)"></app-table>
