Designed and implemented the Change dialog
1. Construct basic components and services
2. 10
3. Designed and implemented the Change dialog supporting text

--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -1,1 +1,83 @@
-<p>change works!</p>
+<div>
+    <table style="table-layout: fixed; width: 100%;">
+        <td>
+            <button style="margin-left: 16px;" class="back-btn" [mat-dialog-close] mat-button
+                color="primary">Go Back
+            </button>
+        </td>
+
+        <td>
+            <p class="title"> {{modification_mode ? 'Modify' : 'Add'}} {{data_type}} </p>
+        </td>
+        <td> </td>
+    </table>
+</div>
+<div style="overflow: hidden;" class="content" mat-dialog-content>
+    <table style="table-layout: fixed; width: 100%;">
+        <tr>
+            <td class="padded" style="text-align: right; vertical-align: bottom;">
+                <table style="table-layout: fixed">
+                    <tr>
+                        <td colspan="2"> <img width="100%" src="../../../../../assets/room-1.png"
+                                height="100%"> </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-right: 0px; width: 50%;"> <button class="image-btn">Add
+                                Picture</button> </td>
+                        <td style="padding-left: 0px; width: 50%;"> <button class="image-btn">Remove
+                                Picture</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <mat-form-field *ngIf="standalone_field" class="full-width">
+                                <mat-label
+                                    class="label">{{formatLabel(standalone_field.key)}}</mat-label>
+                                <textarea class="input" [(ngModel)]="data[standalone_field.key]"
+                                    name="description" matInput></textarea>
+                            </mat-form-field>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td class="padded" style="text-align: left;">
+
+                <!-- Fields -->
+
+                <table style="table-layout: fixed; width: 90%;">
+
+                    <tr *ngFor="let field of fields">
+                        <td>
+
+                            <!-- Raw Text -->
+                            <mat-form-field *ngIf="field.type === 'text'" class="full-width input">
+                                <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
+                                <input class="input" [(ngModel)]="data[field.key]" matInput>
+                            </mat-form-field>
+
+                            
+                </table>
+            </td>
+        </tr>
+    </table>
+</div>
+<div mat-dialog-actions>
+    <table style="table-layout: fixed; width: 100%;">
+        <tr>
+            <td class="padded" style="text-align: right;">
+                <button style="width: 30%;" (click)="delete()" class="delete-btn" mat-button
+                    color="primary" *ngIf="modification_mode">Delete</button>
+                <button style="width: 30%;" class="back-btn"
+                    (click)="modification_mode ? modify() : add()" [disabled]="!fieldsCompleteness || !differenceCheck"
+                    [style.background]="(!fieldsCompleteness || !differenceCheck) ? 'gray' : '#14274A'" mat-button
+                    color="primary">{{modification_mode ?
+                    'Modify' : 'Add'}} {{data_type}}</button>
+            </td>
+            <td *ngIf="toggle" class="padded" style="text-align: left;"> <button style="width: 30%;"
+                    class="back-btn" (click)="triggerToggle()"
+                    [style.background]="!data[toggle.key] ? 'gray' : '#14274A'" mat-button
+                    color="primary">{{data[toggle.key] ? toggle.on_value :
+                    toggle.off_value}}</button> </td>
+        </tr>
+    </table>
+</div>
