Prepared the Linking Process for Sign Up🔒
1. Complete Authentication
2. 10
3. Created the sign up function and linked it to the nav bar. Also deleted one extra spec file.

--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -50,6 +50,6 @@
     </table>
     <div style="margin: -30px; float: right;">
         <p (click)="login()" style="padding-right: 16px;" class="title-4">{{"login" | translate}}</p>
-        <p style="padding-left: 16px;" class="title-4">{{"sign_up" | translate}}</p>
+        <p (click)="signUp()" style="padding-left: 16px;" class="title-4">{{"sign_up" | translate}}</p>
     </div>
 </div>
