Completed Registration Form🔒
1. Complete Authentication
2. 10
3. Completed the registration popup that will validate user information.

--- a/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
+++ b/Client/Website/src/app/service/dialogs/authentication/login/login.component.html
@@ -26,7 +26,7 @@
     </a>
     <br>
     <div class="register">
-        <p>{{'no_account'|translate}}? {{'sign_up'|translate}}</p>
+        <p>{{'no_account'|translate}}?</p> <p (click)="goToRegister()" style="display: inline; text-decoration: underline; margin-left: 2px;"> {{'sign_up'|translate}}</p>
     </div>
 </div>
 <div mat-dialog-actions>
