--- a/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
+++ b/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
@@ -1,3 +1,6 @@
+<button *ngIf="change_injection" class="add-btn" (click)="displayAdd()">{{'add' | translate}}
+  {{data_injection.title}}</button>
+
 <p class="title-1">
   {{data_injection.title}} {{'database' | translate}}
 </p>
@@ -9,4 +12,4 @@
 
 <app-table *ngIf="filtered_data && data_injection && data && data_injection" [data]="data"
   [data_injection]="data_injection" [extra_data]="extra_data" [filtered_data]="filtered_data"
-  (hover)="hover.emit($event)"></app-table>
+  (hover)="hover.emit($event)" (modify_click)="displayModify($event)"></app-table>
