Made some general tweaks🫂
1. Complete Users Database Page
2. 10
3. Tweaked some settings related to the database system, specifically the Users database.

--- a/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.scss
+++ b/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.scss
@@ -31,8 +31,8 @@
 
     background: #14274A;
     border: 1px solid #14274A;
-    position: fixed;
-    bottom: 16px;
+    // position: fixed;
+    // bottom: 16px;
     // right: 16px;
 
 }
