--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -15,19 +15,27 @@
 <div style="overflow: hidden;" class="content" mat-dialog-content>
     <table style="table-layout: fixed; width: 100%;">
         <tr>
-            <td class="padded" style="text-align: right; vertical-align: bottom;">
+            <td class="padded" style="text-align: right; vertical-align: bottom;"
+                *ngIf="side_panel != 'empty' || standalone_field">
                 <table style="table-layout: fixed">
-                    <tr>
-                        <td colspan="2"> <img width="100%" src="../../../../../assets/room-1.png"
-                                height="100%"> </td>
-                    </tr>
-                    <tr>
-                        <td style="padding-right: 0px; width: 50%;"> <button class="image-btn">Add
-                                Picture</button> </td>
-                        <td style="padding-left: 0px; width: 50%;"> <button class="image-btn">Remove
-                                Picture</button>
-                        </td>
-                    </tr>
+                    <ng-container *ngIf="side_panel == 'images'">
+
+                        <tr>
+                            <td colspan="2">
+                                <img width="100%" src="../../../../../assets/room-1.png"
+                                    height="100%">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding-right: 0px; width: 50%;"> <button
+                                    class="image-btn">Add
+                                    Picture</button> </td>
+                            <td style="padding-left: 0px; width: 50%;"> <button
+                                    class="image-btn">Remove
+                                    Picture</button>
+                            </td>
+                        </tr>
+                    </ng-container>
                     <tr>
                         <td colspan="2">
                             <mat-form-field *ngIf="standalone_field" class="full-width">
@@ -85,7 +93,8 @@
                                 class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
                                 <mat-select [multiple]="field.type === 'choices'" class="input"
-                                    [ngModel]="data[field.key]" (ngModelChange)="data[field.key]=$event">
+                                    [ngModel]="data[field.key]"
+                                    (ngModelChange)="data[field.key]=$event">
                                     <mat-option class="input"
                                         *ngFor="let type of field.choices.choices"
                                         [value]="field.choices.key ? field.choices.key(type) : type[0]">
@@ -100,7 +109,8 @@
                                 class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
                                 <mat-select [multiple]="field.type === 'choices'" class="input"
-                                    [ngModel]="data[field.key]" (ngModelChange)="data[field.key]=$event">
+                                    [ngModel]="data[field.key]"
+                                    (ngModelChange)="data[field.key]=$event">
                                     <mat-option class="input"
                                         *ngFor="let type of linked_data | keyvalue"
                                         [value]="field.choices.key ? field.choices.key([type.key, type.value]) : type.key">
@@ -147,9 +157,10 @@
                 <button style="width: 30%;" (click)="delete()" class="delete-btn" mat-button
                     color="primary" *ngIf="modification_mode">Delete</button>
                 <button style="width: 30%;" class="back-btn"
-                    (click)="modification_mode ? modify() : add()" [disabled]="!fieldsCompleteness || !differenceCheck"
-                    [style.background]="(!fieldsCompleteness || !differenceCheck) ? 'gray' : '#14274A'" mat-button
-                    color="primary">{{modification_mode ?
+                    (click)="modification_mode ? modify() : add()"
+                    [disabled]="!fieldsCompleteness || !differenceCheck"
+                    [style.background]="(!fieldsCompleteness || !differenceCheck) ? 'gray' : '#14274A'"
+                    mat-button color="primary">{{modification_mode ?
                     'Modify' : 'Add'}} {{data_type}}</button>
             </td>
             <td *ngIf="toggle" class="padded" style="text-align: left;"> <button style="width: 30%;"
