--- a/Client/Website/src/app/components/database/database.component.html
+++ b/Client/Website/src/app/components/database/database.component.html
@@ -1,25 +1,39 @@
-<div *ngIf="hover_list && data_injection.hover_fetcher && display_hover[1]" class="follow-mouse"
-  [style.left]="(mouseX + 16) + 'px'" [style.top]="(mouseY + 16) + 'px'">
+<div
+  *ngIf="display_hover[1] && ((hover_list && data_injection.hover_fetcher) || (data_injection.hover_display && data_injection.hover_display(display_hover[1])))"
+  class="follow-mouse" [style.left]="(mouseX + 16) + 'px'" [style.top]="(mouseY + 16) + 'px'">
 
 
-  <div *ngFor="let item of hover_list">
-    <div *ngFor="let row of data_injection.hover_fetcher.format(item[1])">
+  <div *ngIf="data_injection.hover_display">
+    <div *ngFor="let row of data_injection.hover_display(display_hover[1])">
       {{row}}
+    </div>
+  </div>
+  <div *ngIf="data_injection.hover_fetcher">
+    <div *ngFor="let item of hover_list">
+      <div *ngFor="let row of data_injection.hover_fetcher.format(item[1])">
+        {{row}}
+      </div>
     </div>
   </div>
 
 </div>
 
-<div *ngIf="hover_list && extra_injection?.hover_fetcher && extra_display_hover[1]"
+<div
+  *ngIf="extra_display_hover[1] && ((hover_list && extra_injection?.hover_fetcher) || (extra_injection?.hover_display && extra_injection?.hover_display(extra_display_hover[1])))"
   class="follow-mouse" [style.left]="(mouseX + 16) + 'px'" [style.top]="(mouseY + 16) + 'px'">
 
-  <ng-container *ngFor="let item of extra_list">
-    <div *ngIf="extra_injection && extra_injection.hover_fetcher">
+  <div *ngIf="extra_injection?.hover_display">
+    <div *ngFor="let row of extra_injection?.hover_display(extra_display_hover[1])">
+      {{row}}
+    </div>
+  </div>
+  <div *ngIf="extra_injection && extra_injection.hover_fetcher">
+    <div *ngFor="let item of extra_list">
       <div *ngFor="let row of extra_injection.hover_fetcher.format(item[1])">
         {{row}}
       </div>
     </div>
-  </ng-container>
+  </div>
 
 </div>
 
