Made real-time improvements🫂
1. Complete Users Database Page
2. 10
3. Changed the way the database handles Data by forcing a refresh when an error is encountered. Fixed some design anomalies

--- a/Client/Website/src/app/components/database/blocks/table/table.component.html
+++ b/Client/Website/src/app/components/database/blocks/table/table.component.html
@@ -50,7 +50,7 @@
       *matRowDef="let row; columns: getDisplayedColumnsKey;">
   </tr>
 </table>
-<mat-progress-bar *ngIf="!this.data" mode="indeterminate"></mat-progress-bar>
+<mat-progress-bar *ngIf="this.loading" mode="indeterminate"></mat-progress-bar>
 
 <div [hidden]="!this.data">
   <mat-paginator style="display: flex; justify-content: center; margin-bottom: 32px;"
