--- a/Client/Website/src/app/components/database/database.component.html
+++ b/Client/Website/src/app/components/database/database.component.html
@@ -18,7 +18,6 @@
   </div>
 
 </div>
-
 <div
   *ngIf="extra_display_hover[1] && ((hover_list && extra_injection?.hover_fetcher) || (extra_injection?.hover_display && extra_injection?.hover_display(extra_display_hover[1])?.length))"
   class="follow-mouse" [style.left]="(mouseX + 16) + 'px'" [style.top]="(mouseY + 16) + 'px'">
@@ -49,7 +48,7 @@
           </td>
           <td style="text-align: center;">
 
-            <app-table-unit [change_injection]="change_injection" [data_map]="all_data_map"
+            <app-table-unit [loading]="loading[0]" [change_injection]="change_injection" [data_map]="all_data_map"
               [extra_data_map]="all_extra_map" [data]="all_data" [data_injection]="data_injection"
               [extra_data]="all_extra" [filtered_data]="filtered_data"
               (hover)="display_hover = $event"></app-table-unit>
@@ -61,7 +60,7 @@
         </tr>
       </table>
     </td>
-    <td *ngIf="all_extra && extra_data && extra_injection && all_extra_map"
+    <td *ngIf="loading[1] || (all_extra && extra_data && extra_injection && all_extra_map)"
       style="vertical-align: top;">
 
 
@@ -71,11 +70,11 @@
           <td [style.width]="!extra_injection ? '10%' : '5%'">
 
           </td>
-          <td style="text-align: center;">
+          <td *ngIf="extra_injection" style="text-align: center;">
 
-            <app-table-unit [change_injection]="extra_change_injection" [data_map]="all_extra_map"
-              [extra_data_map]="undefined" [data]="all_extra" [data_injection]="extra_injection"
-              [extra_data]="all_extra" [filtered_data]="extra_data"
+            <app-table-unit [loading]="loading[1]" [change_injection]="extra_change_injection" [data_map]="all_extra_map!"
+              [extra_data_map]="undefined" [data]="all_extra!" [data_injection]="extra_injection"
+              [extra_data]="all_extra" [filtered_data]="extra_data!"
               (hover)="extra_display_hover = $event"></app-table-unit>
 
           </td>
